--- a/artist3.html
+++ b/artist3.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>Daft Punk | Homepage of David Muller</title>
-	
+    <title>Emma Frick | Homepage of David Muller</title>
+
     <link rel="website icon" href="images/icon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-	
+
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 		<div class="headerText">
 		<a href="index.html" >David Muller</a>
 		<br>
-		<h1>Music</h1> 
+		<h1>Artist Websites</h1> 
 		</div>
 	</div>
     <div class="jumbotron">
@@ -97,17 +97,10 @@
             </div>
         </nav>
         <div class="well">
-            <p>Daft Punk</p>
+            <p><b>Emma Frick</b></p>
             <hr>
-            <h3>"<i>Daft Punk are an electronic music duo consisting of French musicians Guy-Manuel de Homem-Christo and Thomas Bangalter. The duo achieved significant popularity in the late 1990s as part of the French house movement and were met with continued success in the years following, combining elements of house music with funk, techno, disco, rock, and synthpop.</i>"</h3>
-            <center><img src="images/dpunk.jpg" alt="Daft Punk" class="img-responsive" width="626" height="424"></center>
-			<br>
-            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Daft_Punk">(Source: Wikipedia)</i></a></p>
-            </p>
-            <hr>
-            <h3>More Text</h3>
+            <h3></h3>
         </div>
-
     </div>
     <div class="footer">
         <p id="emailLink">
