--- a/book1.html
+++ b/book1.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
-	<link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers|Candal|Orbitron' rel='stylesheet' type='text/css'> 
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -19,16 +19,18 @@
 
 <body>
     <div class="header">
-    </div>
-    <div class="myName">
-        <a href="index.html">David Muller</a>
-		<div class="pageTitle">
-			<h1>Books</h1>
+	</div>
+	<div class="container">
+		<div class="headerText">
+		<a href="index.html" >David Muller</a>
+		<br>
+		<h1>Books</h1> 
 		</div>
 	</div>
-        <div class="jumbotron">
-            <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px"></center>
-        </div>
+    <div class="jumbotron">
+        <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" height="150px">
+        </center>
+    </div>
     <div class="container">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -38,7 +40,9 @@
                         </li>
                         <li class="active"><a href="games.html"><span class="glyphicon glyphicon-tasks"></span> Games </a>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School Courses <span class="caret"></span></a>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School <span class="caret"></span>
+                            </a>
                             <ul class="dropdown-menu">
                                 <li><a href="school1.html"> Political Government </a>
                                 </li>
@@ -54,7 +58,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movie <span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movies <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="movie1.html"> The Dark Knight </a>
                                 </li>
@@ -72,19 +76,19 @@
                         </li>
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-facetime-video"></span> Television Shows <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="tv1.html">Rick and Morty</a>
+                                <li><a href="tv1.html"> Rick and Morty </a>
                                 </li>
-                                <li><a href="tv2.html">Community</a>
+                                <li><a href="tv2.html"> Community </a>
                                 </li>
-                                <li><a href="tv3.html">Arrested Development</a>
+                                <li><a href="tv3.html"> Arrested Development </a>
                                 </li>
                             </ul>
                         </li>
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-picture"></span> Artist Websites<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="artist3.html">Emma's Website</a>
+                                <li><a href="artist3.html"> Emma Frick </a>
                                 </li>
-                                <li><a href="artist4.html">Annie's Website</a>
+                                <li><a href="artist4.html"> Annie O'Dea </a>
                                 </li>
                             </ul>
                         </li>
@@ -97,7 +101,7 @@
 			<h4 class "createdBy" style="text-align:center">Author: Eric Schlosser</h4>
             <hr>
             <h3>"<i>Fast Food Nation: The Dark Side of the All-American Meal (2001) is a book by investigative journalist Eric Schlosser that examines the local and global influence of the United States fast food industry.</i>"</h3>
-			<center><img src="images/Fast_food_nation.jpg" alt="Fast Food Nation" class="img-rounded" width="20" height="20"></center>
+			<center><img src="images/Fast_food_nation.jpg" alt="Fast Food Nation" class="img-responsive" width="" height=""></center>
 			<br>
             <p id="source"><i><a href="https://en.wikipedia.org/wiki/Fast_Food_Nation">(Source: Wikipedia)</i></a></p>
             <hr>
