--- a/games.html
+++ b/games.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
-	<link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers|Candal|Orbitron' rel='stylesheet' type='text/css'> 
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -19,15 +19,16 @@
 
 <body>
     <div class="header">
-    </div>
-    <div class="myName">
-        <a href="index.html">David Muller</a>
-		<div class="pageTitle">
-			<h1>Games</h1>
+	</div>
+	<div class="container">
+		<div class="headerText">
+		<a href="index.html" >David Muller</a>
+		<br>
+		<h1>Games</h1> 
 		</div>
-    </div>
+	</div>
     <div class="jumbotron">
-        <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px">
+        <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" height="150px">
         </center>
     </div>
     <div class="container">
@@ -40,7 +41,7 @@
                         <li class="active"><a href="games.html"><span class="glyphicon glyphicon-tasks"></span> Games </a>
                         </li>
                         <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School Courses <span class="caret"></span>
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="school1.html"> Political Government </a>
@@ -57,7 +58,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movie <span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movies <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="movie1.html"> The Dark Knight </a>
                                 </li>
@@ -75,19 +76,19 @@
                         </li>
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-facetime-video"></span> Television Shows <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="tv1.html">Rick and Morty</a>
+                                <li><a href="tv1.html"> Rick and Morty </a>
                                 </li>
-                                <li><a href="tv2.html">Community</a>
+                                <li><a href="tv2.html"> Community </a>
                                 </li>
-                                <li><a href="tv3.html">Arrested Development</a>
+                                <li><a href="tv3.html"> Arrested Development </a>
                                 </li>
                             </ul>
                         </li>
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-picture"></span> Artist Websites<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="artist3.html">Emma's Website</a>
+                                <li><a href="artist3.html"> Emma Frick </a>
                                 </li>
-                                <li><a href="artist4.html">Annie's Website</a>
+                                <li><a href="artist4.html"> Annie O'Dea </a>
                                 </li>
                             </ul>
                         </li>
@@ -98,7 +99,7 @@
         <div class="well">
             <p>Video Game Trivia</p>
             <hr>
-          
+          </div>
     </div>
 
     <div class="footer">
