--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
-    <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers|Candal|Orbitron' rel='stylesheet' type='text/css'> 
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -19,20 +19,16 @@
 
 <body>
     <div class="header">
-    </div>
-    <!--<div class="myName">
-        <a href="index.html">David Muller</a>
-    <div class="pageTitle">
-        <h1>Home</h1>
-    </div>
-    </div>-->
+	</div>
 	<div class="container">
-  <div class="jumbotron" id="header">
-    <p>Bootstrap Tutorial</p> 
-  </div>
-</div>
+		<div class="headerText">
+		<a href="index.html" >David Muller</a>
+		<br>
+		<h1>Home</h1> 
+		</div>
+	</div>
     <div class="jumbotron">
-        <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px">
+        <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" height="150px">
         </center>
     </div>
     <div class="container">
@@ -45,7 +41,7 @@
                         <li class="active"><a href="games.html"><span class="glyphicon glyphicon-tasks"></span> Games </a>
                         </li>
                         <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School Courses <span class="caret"></span>
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="school1.html"> Political Government </a>
@@ -62,7 +58,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movie <span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movies <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="movie1.html"> The Dark Knight </a>
                                 </li>
@@ -80,19 +76,19 @@
                         </li>
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-facetime-video"></span> Television Shows <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="tv1.html">Rick and Morty</a>
+                                <li><a href="tv1.html"> Rick and Morty </a>
                                 </li>
-                                <li><a href="tv2.html">Community</a>
+                                <li><a href="tv2.html"> Community </a>
                                 </li>
-                                <li><a href="tv3.html">Arrested Development</a>
+                                <li><a href="tv3.html"> Arrested Development </a>
                                 </li>
                             </ul>
                         </li>
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-picture"></span> Artist Websites<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="artist3.html">Emma's Website</a>
+                                <li><a href="artist3.html"> Emma Frick </a>
                                 </li>
-                                <li><a href="artist4.html">Annie's Website</a>
+                                <li><a href="artist4.html"> Annie O'Dea </a>
                                 </li>
                             </ul>
                         </li>
@@ -101,33 +97,12 @@
             </div>
         </nav>
         <div class="well">
-            <p>About this Website</p>
+            <p><b>About This Website</b></p>
             <hr>
-            <h3>You found my website! This site contains several small code related activities, visuals, and other works that I have created throughout middle and high school. You can contact me by clicking the "Contact Me" button located below. Please leave feedback on how you liked my site and please provide details.</h3>
-        </div>
-        <div class="table-responsive">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Firstname</th>
-                        <th>Lastname</th>
-                        <th>Age</th>
-                        <th>City</th>
-                        <th>Country</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Anna</td>
-                        <td>Pitt</td>
-                        <td>35</td>
-                        <td>New York</td>
-                        <td>USA</td>
-                    </tr>
-                </tbody>
-            </table>
+			<!--<span style="display:inline-block; width: 40px;"></span> -->
+            <h3><font size="12" face="'Bangers'">Hello!</font> and welcome to my website! Under the "Games" category, you will find programs and games I have created using different programming languages. Under "School" you will find a list of different courses that I have taken in high school, each showing off different assignments that I had during the course, such as documents and presentations. In the "Music", "Movies", "Books", and " Television Shows" categories, you will find my favorites under the respective subject, each having some kind of impact my life growing up. In the last category titled "Artist Websites" you will find two different other websites that me and a group of other students from my high school have created for other students for their art class. I hope that you find this site to be useful in finding out about my personality. </h3>
+			<h3>I created this site for a final project for a Coding for Web Design Course that I had in high school, which I created at the same time as the other artist websites. If you have any kind comments about my website or just about me, feel free to contact me by clicking on "Contact Me" at the bottom of each page.</h3>
+			<!--<img src="images/anIcon.png" class="img-rounded" alt="icon" width="304" height="236">-->
         </div>
     </div>
     <div class="footer">
