--- a/tv1.html
+++ b/tv1.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
-	<link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers|Candal|Orbitron' rel='stylesheet' type='text/css'> 
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -19,16 +19,18 @@
 
 <body>
     <div class="header">
-    </div>
-    <div class="myName">
-        <a href="index.html">David Muller</a>
-		<div class="pageTitle">
-			<h1>Television Shows</h1>
+	</div>
+	<div class="container">
+		<div class="headerText">
+		<a href="index.html" >David Muller</a>
+		<br>
+		<h1>Television Shows</h1> 
 		</div>
 	</div>
-        <div class="jumbotron">
-            <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" ; height="150px"></center>
-        </div>
+    <div class="jumbotron">
+        <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" height="150px">
+        </center>
+    </div>
     <div class="container">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -38,7 +40,9 @@
                         </li>
                         <li class="active"><a href="games.html"><span class="glyphicon glyphicon-tasks"></span> Games </a>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School Courses <span class="caret"></span></a>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <span class="glyphicon glyphicon-education"></span> School <span class="caret"></span>
+                            </a>
                             <ul class="dropdown-menu">
                                 <li><a href="school1.html"> Political Government </a>
                                 </li>
@@ -54,7 +58,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movie <span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-facetime-film"></span><span class="glyphicon glyphicon-film"></span> Movies <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="movie1.html"> The Dark Knight </a>
                                 </li>
@@ -72,19 +76,19 @@
                         </li>
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-tv"></span><span class="glyphicon glyphicon-facetime-video"></span> Television Shows <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="tv1.html">Rick and Morty</a>
+                                <li><a href="tv1.html"> Rick and Morty </a>
                                 </li>
-                                <li><a href="tv2.html">Community</a>
+                                <li><a href="tv2.html"> Community </a>
                                 </li>
-                                <li><a href="tv3.html">Arrested Development</a>
+                                <li><a href="tv3.html"> Arrested Development </a>
                                 </li>
                             </ul>
                         </li>
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-picture"></span> Artist Websites<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="artist3.html">Emma's Website</a>
+                                <li><a href="artist3.html"> Emma Frick </a>
                                 </li>
-                                <li><a href="artist4.html">Annie's Website</a>
+                                <li><a href="artist4.html"> Annie O'Dea </a>
                                 </li>
                             </ul>
                         </li>
@@ -97,9 +101,9 @@
 			<h4 class "createdBy" style="text-align:center">Created by: Justin Roiland and Dan Harmon</h4>
             <hr>
             <h3>"<i>The series follows the misadventures of alcoholic scientist Rick and his easily influenced grandson Morty, who split their time between domestic family life and interdimensional travel. Roiland voices the series' eponymous characters, while the series also stars the voice talent of Chris Parnell, Spencer Grammer, and Sarah Chalke. The series has its origins in an animated parody of Back to the Future created by Roiland for film festival Channel 101. Adult Swim approached Harmon for television show ideas, and he and Roiland developed the program based on the short's two characters.</i>"</h3>
-			<center><img src="images/Rick_and_Morty.jpg" alt="Rick and Morty" class="img-rounded"></center>
+			<center><img src="images/Rick_and_Morty.jpg" alt="Rick and Morty" class="img-responsive"></center>
 			<br>
-            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Rick_and_Morty">(Source: Wikipedia)</i></a></p>
+            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Rick_and_Morty" width="700" height="700">(Source: Wikipedia)</i></a></p>
             <hr>
             <h3>More Text</h3>
         </div>
