More on Home page, community, artists, and games
More on Home page, community, artists, and games

--- a/artist4.html
+++ b/artist4.html
@@ -97,9 +97,9 @@
             </div>
         </nav>
         <div class="well">
-            <p><b>Annie O'Dea</b></p>
+            <p><b>Annie O'Dea's Website</b></p>
             <hr>
-            <h3></h3>
+             <h3>I created another website during the time that I created this one with a two other people for someone else in our school. In fact, we created two of them for two different people for their art class. This one I will show you about on this page was for Emma Frick. If you would like to visit the site that we made for her you can go <a href="http://annieodea.github.io">[here]</a></h3>
         </div>
     </div>
     <div class="footer">
