--- a/book1.html
+++ b/book1.html
@@ -105,7 +105,7 @@
 			<br>
             <p id="source"><i><a href="https://en.wikipedia.org/wiki/Fast_Food_Nation">(Source: Wikipedia)</i></a></p>
             <hr>
-            <h3>More Text</h3>
+            <h3>This was a required book to read for a Political Government class in high school for a midterm. For the midterm we wrote an essay we had to enter the conversation by making declarations with the government's role in the debate over food safety in America. Even though it was a requirement to read this book, I was glad my teacher recognized that this was a situation occurring in the present that affects everyone living not only in the United States, but in most developed countries around the world.</h3>
         </div>
     </div>
     <div class="footer">
