--- a/tv2.html
+++ b/tv2.html
@@ -3,30 +3,30 @@
 
 <head>
     <title>Community | Homepage of David Muller</title>
-	
+
     <link rel="website icon" href="images/icon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts-->
-    <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers|Candal|Orbitron' rel='stylesheet' type='text/css'> 
+    <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bangers|Candal|Orbitron' rel='stylesheet' type='text/css'>
     <!--------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-	
+
 </head>
 
 <body>
     <div class="header">
-	</div>
-	<div class="container">
-		<div class="headerText">
-		<a href="index.html" >David Muller</a>
-		<br>
-		<h1>Television Shows</h1> 
-		</div>
-	</div>
+    </div>
+    <div class="container">
+        <div class="headerText">
+            <a href="index.html">David Muller</a>
+            <br>
+            <h1>Television Shows</h1>
+        </div>
+    </div>
     <div class="jumbotron">
         <center><img src="images/headerImage.jpg" alt="Home" class="img-rounded" width="75%" height="150px">
         </center>
@@ -98,15 +98,22 @@
         </nav>
         <div class="well">
             <p>Community</p>
-			<h4 class "createdBy" style="text-align:center">Created by: Dan Harmon</h4>
+            <h4 class "createdBy" style="text-align:center">Created by: Dan Harmon</h4>
             <hr>
             <h3>"<i>Community is an American television sitcom created by Dan Harmon that premiered on NBC on September 17, 2009. The single-camera series follows an ensemble cast of characters played by Joel McHale, Gillian Jacobs, Danny Pudi, Yvette Nicole Brown, Alison Brie, Donald Glover, Ken Jeong, Chevy Chase, and Jim Rash, at a community college in the fictional town of Greendale, Colorado. It makes heavy use of meta-humor and pop culture references, often parodying film and television clichés and tropes.</i>"</h3>
-			<center><img src="images/community.jpg" alt="Community" class="img-responsive" width="1000" height="123"></center>
-			<br>
-            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Community_(TV_series)">(Source: Wikipedia)</i></a></p>
+            <center><img src="images/community.jpg" alt="Community" class="img-responsive" width="1000" height="123">
+            </center>
+            <br>
+            <p id="source"><i><a href="https://en.wikipedia.org/wiki/Community_(TV_series)">(Source: Wikipedia)</i>
+                </a>
+            </p>
             </p>
             <hr>
-            <h3>More Text</h3>
+            <h3>For Spanish class in my freshman year of high school, we had to create a presentation that had pictures of our Imaginary Family. I decided to use characters from the show Community.</h3>
+            <center>
+                <div class="video-container">
+                    <iframe src='https://onedrive.live.com/embed?cid=13985F46528AC91D&resid=13985f46528ac91d%21114603&authkey=AFdVd3wnmd-bTcg&em=2&wdAr=1.3333333333333333' width='350px' height='286px' frameborder='0'>This is an embedded <a target='_blank' href='http://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='http://office.com/webapps'>Office Online</a>.</iframe>
+                </div>
         </div>
     </div>
     <div class="footer">
