--- a/school2.html
+++ b/school2.html
@@ -115,19 +115,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="images/pyAdv1.jpg" alt="Chania">
+      <img src="images/pyAdv1.jpg" alt="pyGame1">
     </div>
 
     <div class="item">
-      <img src="images/pyAdv2.jpg" alt="Chania">
+      <img src="images/pyAdv2.jpg" alt="pyGame2">
     </div>
 
     <div class="item">
-      <img src="images/pyAdv3.jpg" alt="Flower">
+      <img src="images/pyAdv3.jpg" alt="pyGame3">
     </div>
 
     <div class="item">
-      <img src="images/pyAdv4.jpg" alt="Flower">
+      <img src="images/pyAdv4.jpg" alt="pyGame4">
     </div>
   </div>
 
@@ -141,6 +141,9 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<hr>
+<h3>You can find another game similar to this one but in HTML5 in the "Games" section.</h3>
+
 </div>
     </div>
 
